--- a/Reports/bibtex.bib
+++ b/Reports/bibtex.bib
@@ -68,3 +68,15 @@
    howpublished={\textless\url{https://www.haskell.org/happy/}
    \textgreater [Access 7 September 2015]}
 }
+@misc{term_to_binary,
+   author={Ericsson},
+   title={Erlang External Term Format},
+   howpublished={\textless\url{http://erlang.org/doc/apps/erts/erl_ext_dist.html}
+   \textgreater [Access 7 September 2015]}
+}
+@misc{vnmodel,
+   author={Don Fussell},
+   year=2010,
+   title={Von Neumann Model},
+   howpublished={Available at: \textless\url{http://www.cs.utexas.edu/users/fussell/cs310h/lectures/Lecture_9-310h.pdf}}\textgreater [Accessed 5 September 2015]
+}
